# WordsRcite

./: .gitignore  README.md  build.gradle  freeline_project_description.json  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/trinity/wordsrcite/wordsrcite/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: GRE.xml
app/src/main/java/com/trinity/wordsrcite/wordsrcite/: BaseActivity.java  Constants.java  HomeFragment.java  Item.java  ItemData.java  MainActivity.java  MainHandlerConstant.java  ManuActivity.java  MiniActivity.java  MyApplication.java  NewActivity.java  SampleItemAnimator.java  SaveFileActivity.java  SynthActivity.java  WordActivity.java
app/src/main/java/com/trinity/wordsrcite/wordsrcite/Service/: WordParseService.java
app/src/main/java/com/trinity/wordsrcite/wordsrcite/Word/: Word.java  WordBean.java
app/src/main/java/com/trinity/wordsrcite/wordsrcite/Worker/: WorkUtil.java  Worker.java
app/src/main/res/layout/: activity_main_fragment.xml  dialog_progress.xml  fragment_translate.xml  item_word_swipe.xml  manu.xml  p_dialog_operation.xml  p_item_dialog_operation.xml  word.xml  wordbook_item.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/trinity/wordsrcite/wordsrcite/: ExampleUnitTest.java
apt-annotation/src/main/java/com/example/apt_annotation/: AttachView.java
apt-processor/: build.gradle
apt-processor/src/main/java/com/example/apt_processor/: ActivityInjectProcesser.java  AnnotatedClass.java  TypeUtil.java
audiodemo/src/main/java/com/renhui/audiodemo/: MainActivity.java
basecommonlibrary/: build.gradle
basecommonlibrary/src/main/java/com/example/basecommonlibrary/: RouterCommonUtil.java
ffmpegandroidavfilter/: build.gradle
ffmpegandroidavfilter/src/main/cpp/: native-lib.cpp
ffmpegandroidavfilter/src/main/java/com/ws/ffmpegandroidavfilter/: DragScaleView.java  MainActivity.java
ffmpegandroidavfilter/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
indexlib/: build.gradle
libraryaspectj/: build.gradle
libraryaspectj/src/androidTest/java/com/example/libraryaspectj/: ExampleInstrumentedTest.java
libraryaspectj/src/main/: AndroidManifest.xml
libraryaspectj/src/main/java/com/example/libraryaspectj/: DebugLog.java  DebugTrace.java  StopWatch.java  TraceAspect.java
libraryaspectj/src/main/res/values/: strings.xml
libraryaspectj/src/test/java/com/example/libraryaspectj/: ExampleUnitTest.java
libraryplugin/: build.gradle
libraryplugin/src/main/groovy/com/example/: AspectjPlugin.groovy  BusInfo.groovy  JavassistPlugin.groovy  JavassistTransform.groovy  LogTime.java  MyClassTransform.groovy  MyInject.groovy  MyInjects.groovy  MyPlugin.groovy  TimeInject
libraryplugin/src/main/groovy/com/example/helper/: BusHelper.groovy  LogTimeHelper.groovy  Utils.groovy
libraryvideo/: CMakeLists.txt  build.gradle
libraryvideo/src/debug/: AndroidManifest.xml
libraryvideo/src/main/: AndroidManifest.xml
libraryvideo/src/main/audioCpp/: opensl_audio.c
libraryvideo/src/main/cpp/: FFmpeg.cpp  FFmpeg.h  GlUtils.cpp  GlUtils.h  GlView.cpp  GlView.h  JniDefine.h  Opensl_io.cpp  Opensl_io.h  XPlayer.cpp  YUV_GL_DATA.h  hello-jni.c  hello-jni.cpp
libraryvideo/src/main/java/com/example/libraryvideo/: ActivityAudio.java  ActivityOne.java  ActivityTwo.java  FileUtil.java  MainViewAdapter.java  POperationDialog.java  RealmWrapper.java  YLog.java
libraryvideo/src/main/java/com/example/libraryvideo/otherplay/: AVPlayer.java
libraryvideo/src/main/java/com/example/libraryvideo/shape/: RenderUtil.java  Square.java  Triangle.java
libraryvideo/src/main/java/com/example/libraryvideo/surface/: GlView.java  IMediaPlayer.java  MediaController.java  MyGLRenderer.java  MyGLSurfaceView.java  OutlineTextView.java
libraryvideo/src/main/java/com/example/libraryvideo/view/: ABRecyclerViewHolder.java  RecyclerBaseAdapter.java
libraryvideo/src/main/res/drawable/: btn_background_round.xml
libraryvideo/src/main/res/layout/: activity_audio.xml  activity_main.xml  cell_btn.xml  p_dialog_operation.xml  p_item_dialog.xml  p_item_dialog_operation.xml  video_view.xml
libraryvideo/src/main/res/values/: colors.xml  strings.xml  styles.xml
opengl/: build.gradle
opengl/src/main/: AndroidManifest.xml
opengl/src/main/java/com/hy/opengl/: BaseFilter.java  BufferUtil.java  FileUtils.java  GLVideoRenderer.java  ImageRender.java  ImageTextureRender.java  OneActivity.java  ScreenUtils.java  ShaderUtils.java  Triangle.java  VideoActivity.java  VideoRender.java
opengl/src/main/res/layout/: activity_one.xml
picture/: CMakeLists.txt  build.gradle
picture/src/androidTest/java/com/hy/picture/: ExampleInstrumentedTest.java
picture/src/main/: AndroidManifest.xml
picture/src/main/cpp/: push.c  push.cpp  push.h  queue.c
picture/src/main/java/com/hy/picture/: AudioEncoderThread.java  CamParaUtil.java  CameraActivity.java  CameraSurfaceView.java  CheckPermissionsUtil.java  CustomView.java  FileUtil.java  FileUtils.java  MediaActivity.java  MediaMuxerThread.java  MySurfaceView.java  PictureActivity.java  PushActivity.java  SurfaceViewActivity.java  TextureviewActivity.java  VideoEncoderThread.java
picture/src/main/java/com/hy/picture/camera/: CameraPreviewNew.java  FocusView.java  Utils.java
picture/src/main/java/com/hy/picture/push/: AudioParam.java  AudioPusher.java  LivePusher.java  LiveStateChangeListener.java  PushNative.java  Pusher.java  VideoParam.java  VideoPusher.java
picture/src/main/java/com/hy/picture/widget/: GestureViewBinder.java  MaskLayout.java  RatioFrameLayout.java  ScaleGestureBinder.java  ScaleGestureListener.java  ScrollGestureBinder.java  ScrollGestureListener.java  VolumeWheelView.java
picture/src/main/res/layout/: activity_camera.xml  activity_picture.xml  activity_push.xml  activity_surfaceview.xml  activity_textureview.xml
picture/src/main/res/values/: attr.xml
sample/: build.gradle
(+29 files in other folders)
